# treemd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release.yml  rust.yml
docs/: QUERY_IMPLEMENTATION.md  QUERY_LANGUAGE.md
src/: config.rs  input.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/keybindings/: action.rs  defaults.rs  mod.rs  parse.rs
src/parser/: builder.rs  content.rs  document.rs  mod.rs  output.rs  utils.rs
src/query/: ast.rs  error.rs  eval.rs  extractors.rs  lexer.rs  mod.rs  output.rs  parser.rs  registry.rs  value.rs
src/query/builtins/: mod.rs
src/tui/: app.rs  edits.rs  help_text.rs  image_cache.rs  interactive.rs  kitty_animation.rs  mod.rs  syntax.rs  terminal_compat.rs  theme.rs  tty.rs  ui.rs  watcher.rs
src/tui/ui/: layout.rs  mod.rs  popups.rs  table.rs  util.rs
tests/: cli_integration.rs  query_integration.rs
tests/docs/: test.md  test_details.md  test_issue43.md  test_links.md  test_rendering.md
